--- a/swimming/templates/nav.html
+++ b/swimming/templates/nav.html
@@ -1,5 +1,6 @@
 <div id="nav" class="container-full">
     <div class="container">
         <h1><a href="">Swimming</a></h1>
+        <p>"A small win is a concrete, complete, implemented outcome of moderate importance...<br>Small wins are controllable opportunities that produce visible results." – Karl Weick</p>
     </div>
 </div>
