--- a/swimming/static/css/main.css
+++ b/swimming/static/css/main.css
@@ -10,10 +10,30 @@ body {
 body {
   font-family: arial, sans-serif;
 }
+.btn {
+  border: none;
+}
+.btn.btn-primary {
+  background-color: #a29e81;
+}
+.btn.btn-primary:active {
+  background-color: #548d76;
+}
 /* Structural elements.
  * -------------------- */
 #nav {
-  background-color: blue;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a29e81+0,548d76+100 */
+  background: #a29e81;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #a29e81 0%, #548d76 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #a29e81 0%, #548d76 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #a29e81 0%, #548d76 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a29e81', endColorstr='#548d76', GradientType=0);
+  /* IE6-9 */
+  color: white;
 }
 #nav h1 {
   margin-top: 10px;
@@ -29,29 +49,54 @@ body {
 /* Pages.
  * ------ */
 #index-page h2 {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
-  text-decoration: underline;
 }
 #index-page ul {
   /* Required so that users can drag items into empty lists. */
-  min-height: 200px;
+  min-height: 40px;
+  border-bottom: 1px solid #eee;
 }
 #index-page ul li {
-  background: green;
+  background-color: #f9f9f9;
   height: 40px;
-  padding: 5px;
+  padding: 10px;
+  font-weight: bold;
+  border-top: 1px solid #eee;
+  border-left: 1px solid #eee;
+  border-right: 1px solid #eee;
 }
-#index-page ul li:nth-child(odd) {
-  background: red;
+#index-page ul li span {
+  position: relative;
+  left: 10px;
 }
-/* Sortable jQuery plugin overrides.
- */
+#index-page ul#todo {
+  border-bottom: 1px solid #faafa6;
+}
+#index-page ul#todo li {
+  background-color: #fddeda;
+  border-top: 1px solid #faafa6;
+  border-left: 1px solid #faafa6;
+  border-right: 1px solid #faafa6;
+}
+#index-page ul#done li span {
+  text-decoration: line-through;
+}
+#index-page #controls {
+  border-top: 1px solid #eee;
+  padding-top: 15px;
+  margin-top: 10px;
+}
+#wins-create-page input[type="text"] {
+  width: 350px;
+}
+/* Plugin overrides.
+ * ----------------- */
 .sortable-dragging {
-  border: 3px solid purple;
+  border: 3px solid #a29e81 !important;
 }
 .sortable-placeholder {
   background-color: white !important;
-  border: 3px solid orange;
+  border: 2px dotted #ccc !important;
   height: 40px;
 }
