--- a/swimming/static/css/variables.less
+++ b/swimming/static/css/variables.less
@@ -1,13 +1,6 @@
-@color-medium-crimson: #C93756;
-@color-cochineal: #9D2933;
-
-@color-navy-blue: #003171;
-@color-charcoal: #444;
-@color-bellflower: #5D3F6A;
-@color-bellflower-hover: #3A243B;
-
-@color-menu-gray: #f9f9f9;
-@color-menu-pressed: #eee;
+@color-light-brown: #a29e81;
+@color-teal: #548d76;
+@color-pink: #faafa6;
 
 @font-family-accent: 'Roboto';
 @font-family-base: arial, sans-serif;
