--- a/swimming/templates/wins_create.html
+++ b/swimming/templates/wins_create.html
@@ -7,13 +7,12 @@
 
 {% include "nav.html" %}
 
-<div id="wins-create" class="page-wrapper">
+<div id="wins-create-page" class="page-wrapper">
     <div class="page container">
-        <h1>Create win</h1>
-        <p>"A small win is a concrete, complete, implemented outcome of moderate importance."</p>
+        <h1>Create Task</h1>
         <form action="/swimming/win/create" method="post" class="form-inline">
             <div class="form-group">
-                <input type="text" name="task" placeholder="Something concrete..." class="form-control"/>
+                <input type="text" name="task" placeholder="Something concrete, immediate, and controllable..." class="form-control"/>
                 <input type="submit" class="btn" value="Create"/>
             </div>
         </form>
