--- a/swim/static/css/main.less
+++ b/swim/static/css/main.less
@@ -105,9 +105,15 @@ body {
   }
 }
 
-#wins-create-page {
+#task-create-page {
   input[type="text"] {
     width: 350px;
+  }
+}
+
+#tasks-completed-page {
+  table {
+    font-size: @font-size-base;
   }
 }
 
