--- a/swim/templates/head.html
+++ b/swim/templates/head.html
@@ -5,7 +5,7 @@
 
     <link rel="shortcut icon" href="static/image/favicon.png" />
 
-    <title>Swimming</title>
+    <title>swim</title>
 
     <!-- Libraries -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,400italic" rel="stylesheet" type="text/css">
