--- a/swim/templates/tasks_completed.html
+++ b/swim/templates/tasks_completed.html
@@ -9,7 +9,7 @@
 
 <div id="tasks-completed-page" class="page-wrapper">
     <div class="page container">
-        <h1>Completed tasks</h1>
+        <h1>Completed Tasks</h1>
         <form action="/swim/task/update" method="post">
             <table class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
