Created date_completed field for tasks since we want to show recently completed tasks, not recently created ones.

--- a/swim/templates/tasks_completed.html
+++ b/swim/templates/tasks_completed.html
@@ -24,7 +24,7 @@
                     <tr>
                         <td>{{ task.description }}</td>
                         <td>{{ task.status }}</td>
-                        <td>{{ task.date_ }}</td>
+                        <td>{{ task.date_completed }}</td>
                         <td><input type="checkbox" name="{{ task.id }}"/></td>
                     </tr>
                 {% endfor %}
