--- a/swim/templates/nav.html
+++ b/swim/templates/nav.html
@@ -1,6 +1,7 @@
 <div id="nav" class="container-full">
     <div class="container">
-        <h1><a href="">swim</a></h1>
-        <p>"A small win is a concrete, complete, implemented outcome of moderate importance...<br>Small wins are controllable opportunities that produce visible results." – Karl Weick</p>
+        <h1 class="pull-left"><a href="">swim</a></h1>
+        <p class="pull-left"><a href="auth/login">{{ g.user.name }}</a></p>
+        <div class="clear"></div>
     </div>
 </div>
