--- a/swim/static/css/main.less
+++ b/swim/static/css/main.less
@@ -28,6 +28,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: @font-family-accent;
+  margin-top: 0;
 }
 
 /* Structural elements.
@@ -41,9 +42,7 @@ h1, h2, h3, h4, h5, h6 {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color-light-brown', endColorstr='@color-teal',GradientType=0 ); /* IE6-9 */
   color: white;
 
-  h1 {
-    margin-top: 10px;
-
+  h1, p {
     a,
     a:hover,
     a:active {
@@ -51,19 +50,29 @@ h1, h2, h3, h4, h5, h6 {
       text-decoration: none;
     }
   }
+  
+  h1 {
+    margin-top: 10px;
+  }
 
   p {
-    font-family: @font-family-accent;
+    a {
+      font-family: @font-family-accent;
+      position: relative;
+      top: 28px;
+      left: 15px;
+    }
   }
 }
 
 /* Content that spans pages.
  * ------------------------- */
-.page-wrapper {  }
+.page {
+  margin: 30px auto;
+}
 
 /* Pages.
  * ------ */
-
 #index-page {
   h2 {
     font-size: 20px;
@@ -126,6 +135,10 @@ h1, h2, h3, h4, h5, h6 {
   input[type="text"] {
     width: 350px;
   }
+  p {
+    font-size: 16px;
+    margin: 30px 0;
+  }
 }
 
 #tasks-completed-page {
@@ -134,9 +147,14 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+#auth-page {
+  input {
+    margin-bottom: 10px;
+  }
+}
+
 /* Plugin overrides.
  * ----------------- */
-
 .sortable-dragging {
   border: 3px solid @color-light-brown !important;
 }
