--- a/swim/templates/auth.html
+++ b/swim/templates/auth.html
@@ -3,29 +3,35 @@
 
 {% include "head.html" %}
 
+{% include "nav.html" %}
+
 <body>
 
 <div id="auth-page" class="page-wrapper">
-    <div class="page">
-        <div>
-            <form action="auth/login" method="post">
-                <input type="text"
-                       class="form-control"
-                       name="username"
-                       placeholder="Username"
-                       autocomplete="off">
-                <input type="password"
-                       class="form-control"
-                       name="password"
-                       placeholder="Password"
-                       autocomplete="off">
-                <button type="submit" class="btn">Log in</button>
-            </form>
-        </div>
-        <div id="logout-section">
-            <form action="auth/logout" method="post">
-                <button type="submit" class="btn">Log out</button>
-            </form>
+    <div class="page container">
+        <div class="row">
+            <div class="col-md-3">
+                <div>
+                    <form action="auth/login" method="post">
+                        <input type="text"
+                               class="form-control"
+                               name="username"
+                               placeholder="Username"
+                               autocomplete="off">
+                        <input type="password"
+                               class="form-control"
+                               name="password"
+                               placeholder="Password"
+                               autocomplete="off">
+                        <button type="submit" class="btn">Log in</button>
+                    </form>
+                </div>
+                <div id="logout-section">
+                    <form action="auth/logout" method="post">
+                        <button type="submit" class="btn">Log out</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
