--- a/swim/templates/tasks_create.html
+++ b/swim/templates/tasks_create.html
@@ -10,10 +10,11 @@
 <div id="task-create-page" class="page-wrapper">
     <div class="page container">
         <h1>Create Task</h1>
+        <p>"A small win is a concrete, complete, implemented outcome of moderate importance...<br>Small wins are controllable opportunities that produce visible results." – Karl Weick</p>
         <form action="/swim/task/create" method="post" class="form-inline">
             <div class="form-group">
                 <input type="text" name="description"
-                       placeholder="Something concrete, immediate, and controllable..."
+                       placeholder="Enter a small win..."
                        class="form-control"/>
                 <input type="submit" class="btn" value="Create"/>
             </div>
