Added small wins count.

--- a/swim/templates/tasks_completed.html
+++ b/swim/templates/tasks_completed.html
@@ -10,6 +10,7 @@
 <div id="tasks-completed-page" class="page-wrapper">
     <div class="page container">
         <h1>Completed Tasks</h1>
+        <p>Small wins completed: {{ total_tasks_completed }}</p>
         <form action="/swim/task/update" method="post">
             <table class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
