--- a/swim/templates/head.html
+++ b/swim/templates/head.html
@@ -21,4 +21,6 @@
     <!-- Custom -->
     <link rel="stylesheet" href="static/css/main.css"/>
     <script src="static/js/main.js"></script>
+    
+    <link rel="apple-touch-icon" href="static/images/iphone-icon.png">
 </head>
