Made task height flexible for longer descriptions.

--- a/swim/static/css/main.less
+++ b/swim/static/css/main.less
@@ -89,10 +89,10 @@ h1, h2, h3, h4, h5, h6 {
     /* Required so that users can drag items into empty lists. */
     min-height: @dim-win-height;
     border-bottom: 1px solid #eee;
-
+    
     li {
       background-color: #f9f9f9;
-      height: @dim-win-height;
+      min-height: @dim-win-height;
       padding: 10px;
       font-weight: bold;
       border-top: 1px solid #eee;
