--- a/swim/static/css/main.css
+++ b/swim/static/css/main.css
@@ -85,7 +85,7 @@ h6 {
 }
 #index-page ul li {
   background-color: #f9f9f9;
-  height: 40px;
+  min-height: 40px;
   padding: 10px;
   font-weight: bold;
   border-top: 1px solid #eee;
