--- a/swim/static/css/main.css
+++ b/swim/static/css/main.css
@@ -121,6 +121,7 @@ h6 {
 }
 #task-create-page input[type="text"] {
   width: 350px;
+  margin-bottom: 10px;
 }
 #task-create-page p {
   font-size: 16px;
