--- a/swim/static/css/main.less
+++ b/swim/static/css/main.less
@@ -142,6 +142,7 @@ h1, h2, h3, h4, h5, h6 {
 #task-create-page {
   input[type="text"] {
     width: 350px;
+    margin-bottom: 10px;
   }
   p {
     font-size: 16px;
