--- a/swim/templates/index.html
+++ b/swim/templates/index.html
@@ -25,6 +25,7 @@
                             <input type="checkbox" name="{{ task.id }}"/>
                             <span class="description">{{ task.description }}</span>
                             <span>(</span><span class="duration">{{ task.duration }}</span><span>)</span>
+                            <span class="labels">{{ task.labels_as_string }}</span>
                         </li>
                         {% endfor %}
                     </ul>
@@ -37,6 +38,7 @@
                             <input type="checkbox" name="{{ task.id }}"/>
                             <span class="description">{{ task.description }}</span>
                             <span>(</span><span class="duration">{{ task.duration }}</span><span>)</span>
+                            <span class="labels">{{ task.labels_as_string }}</span>
                         </li>
                         {% endfor %}
                     </ul>
@@ -49,6 +51,7 @@
                             <input type="checkbox" name="{{ task.id }}"/>
                             <span class="description">{{ task.description }}</span>
                             <span>(</span><span class="duration">{{ task.duration }}</span><span>)</span>
+                            <span class="labels">{{ task.labels_as_string }}</span>
                         </li>
                         {% endfor %}
                     </ul>
