--- a/swim/templates/tasks_completed.html
+++ b/swim/templates/tasks_completed.html
@@ -11,6 +11,7 @@
     <div class="page container">
         <h1>Completed Tasks</h1>
         <p>Small wins completed: {{ total_tasks_completed }}</p>
+        <p>Total time spent (hours): {{ total_hours_spent }}</p>
         <form action="/swim/task/update" method="post">
             <table class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
