--- a/swim/templates/nav.html
+++ b/swim/templates/nav.html
@@ -1,7 +1,6 @@
 <div id="nav" class="container-full">
     <div class="container">
-        <h1 class="pull-left"><a href="">swim</a></h1>
-        <p class="pull-left"><a href="auth/login">{{ g.user.name }}</a></p>
+        <p><a href="">{{ g.user.name }}</a></p>
         <div class="clear"></div>
     </div>
 </div>
