Move app to subdomain.

--- a/swim/templates/index.html
+++ b/swim/templates/index.html
@@ -10,12 +10,12 @@
 <div id="index-page" class="page-wrapper">
     <div id="menu" class="container-full">
         <div class="container">
-            <a href="/swim/task/create" class="btn btn-primary">Create</a>
-            <a href="/swim/task" class="btn btn-primary">Completed</a>
+            <a href="task/create" class="btn btn-primary">Create</a>
+            <a href="task" class="btn btn-primary">Completed</a>
         </div>
     </div>
     <div class="page container">
-        <form action="/swim/task/update" method="post">
+        <form action="task/update" method="post">
             <div class="row">
                 <div class="col-md-4">
                     <h2>Todo</h2>
