--- a/swim/templates/tasks_create.html
+++ b/swim/templates/tasks_create.html
@@ -11,7 +11,7 @@
     <div class="page container">
         <h1>Create Task</h1>
         <p>"A small win is a concrete, complete, implemented outcome of moderate importance...<br>Small wins are controllable opportunities that produce visible results." – Karl Weick</p>
-        <form action="/swim/task/create" method="post">
+        <form action="task/create" method="post">
             <input type="text" name="description"
                    placeholder="Task description"
                    class="form-control"/>
