--- a/swim/templates/tasks_completed.html
+++ b/swim/templates/tasks_completed.html
@@ -19,7 +19,7 @@
                 </li>
             {% endfor %}
         </ul>
-        <form action="/swim/task/update" method="post">
+        <form action="task/update" method="post">
             <table class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                     <tr>
