Added total-time feature.

--- a/swim/static/css/main.css
+++ b/swim/static/css/main.css
@@ -106,6 +106,10 @@ h6 {
 #index-page ul#done li span {
   text-decoration: line-through;
 }
+#index-page .total-time {
+  font-size: 14px;
+  font-weight: bold;
+}
 #index-page #controls {
   border-top: 1px solid #eee;
   padding-top: 15px;
