--- a/swim/static/css/main.less
+++ b/swim/static/css/main.less
@@ -128,6 +128,11 @@ h1, h2, h3, h4, h5, h6 {
     }
   }
 
+  .total-time {
+    font-size: 14px;
+    font-weight: bold;
+  }
+
   #controls {
     border-top: 1px solid #eee;
     padding-top: 15px;
