Highlight current task. Percent time per label.

--- a/swim/static/css/main.css
+++ b/swim/static/css/main.css
@@ -103,6 +103,9 @@ h6 {
   border-left: 1px solid #faafa6;
   border-right: 1px solid #faafa6;
 }
+#index-page ul#todo li.first {
+  background-color: #faafa6;
+}
 #index-page ul#done li span {
   text-decoration: line-through;
 }
