--- a/swim/static/css/main.less
+++ b/swim/static/css/main.less
@@ -116,6 +116,10 @@ h1, h2, h3, h4, h5, h6 {
         border-top: 1px solid @color-pink;
         border-left: 1px solid @color-pink;
         border-right: 1px solid @color-pink;
+
+        &.first {
+          background-color: @color-pink;
+        }
       }
     }
 
