--- a/swim/templates/tasks_completed.html
+++ b/swim/templates/tasks_completed.html
@@ -12,13 +12,22 @@
         <h1>Completed Tasks</h1>
         <p>Small wins completed: {{ total_tasks_completed }}</p>
         <p>Total time spent (hours): {{ total_hours_spent }}</p>
-        <ul class="list-inline">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Label</th>
+                    <th># tasks</th>
+                    <th>% time</th>
+                </tr>
+            </thead>
             {% for label in label_task_counts %}
-                <li>
-                    {{ label }}: {{ label_task_counts[label] }}
-                </li>
+                <tr>
+                    <td>{{ label }}</td>
+                    <td>{{ label_task_counts[label] }}</td>
+                    <td>{{ pct_time_per_label[label] }}</td>
+                </tr>
             {% endfor %}
-        </ul>
+        </table>
         <form action="task/update" method="post">
             <table class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
