--- a/swim/templates/index.html
+++ b/swim/templates/index.html
@@ -20,6 +20,7 @@
                 <div class="col-md-4">
                     <h2>Todo</h2>
                     <div class="total-time"></div>
+                    <ul class="label-pcts"></ul>
                     <ul class="list-unstyled connected" id="todo">
                         {% for task in todo %}
                         <li>
@@ -34,6 +35,7 @@
                 <div class="col-md-4">
                     <h2>Queued</h2>
                     <div class="total-time"></div>
+                    <ul class="label-pcts"></ul>
                     <ul class="list-unstyled connected" id="queued">
                         {% for task in queued %}
                             <li>
@@ -48,6 +50,7 @@
                 <div class="col-md-4">
                     <h2>Done</h2>
                     <div class="total-time"></div>
+                    <ul class="label-pcts"></ul>
                     <ul class="list-unstyled connected" id="done">
                         {% for task in done %}
                         <li>
